Better comments, added JavaDocs and shorter code