@@ -1,7 +1,5 @@
 import greenfoot.*;
 
-// I'll try and explain this later
-
 public class Renderer extends Actor
 {
 public Renderer(int width, int height) {
@@ -9,9 +7,10 @@ public Renderer(int width, int height) {
   drawScene();
 }
 
-private int fov = 90;
-private java.util.List<float[]> renderQueue = new java.util.ArrayList<>();
-private MatrixMath matrixMath = new MatrixMath();
+public static int fov = 90;
+
+private final java.util.List<float[]> renderQueue = new java.util.ArrayList<>();
+private final MatrixMath matrixMath = new MatrixMath();
 
 private Camera camera;
 public void setCamera(Camera camera) {
@@ -26,33 +25,36 @@ public java.util.List<float[]> getRenderQueue () {
   return renderQueue;
 }
 
-public void queueMesh(float[] meshPosition, float[] meshRotation, float[] meshScale, float[] meshVertices, int[] triIndices, float[] triangleUVs, GreenfootImage texture) {
+/**
+ * Adds the mesh to the render-queue
+ */
+public void queueMesh(Meshes mesh) {
   if (camera == null) { return; }
 
-  float[] worldVerts = meshVertices.clone();
+  float[] worldVerts = mesh.getVertices().clone();
 
-  // 1. Local scale
+  /* Scale mesh */
   for (int i = 0; i < worldVerts.length; i += 4) {
-    worldVerts[i]     *= meshScale[0];
-    worldVerts[i + 1] *= meshScale[1];
-    worldVerts[i + 2] *= meshScale[2];
+    worldVerts[i]     *= mesh.getScale()[0];
+    worldVerts[i + 1] *= mesh.getScale()[1];
+    worldVerts[i + 2] *= mesh.getScale()[2];
   }
 
-  // 2. Mesh rotation
+  /* Rotate mesh */
   for (int i = 0; i < worldVerts.length; i += 4) {
     float[] v = java.util.Arrays.copyOfRange(worldVerts, i, i + 4);
-    matrixMath.matrixRotation(v, meshRotation[0], meshRotation[1], meshRotation[2]);
+    matrixMath.matrixRotation(v, mesh.getRotation()[0], mesh.getRotation()[1], mesh.getRotation()[2]);
     System.arraycopy(v, 0, worldVerts, i, 4);
   }
 
-  // 3. Translate into world space
+  /* Translate into world space */
   for (int i = 0; i < worldVerts.length; i += 4) {
-    worldVerts[i]     += meshPosition[0];
-    worldVerts[i + 1] += meshPosition[1];
-    worldVerts[i + 2] += meshPosition[2];
+    worldVerts[i]     += mesh.getPosition()[0];
+    worldVerts[i + 1] += mesh.getPosition()[1];
+    worldVerts[i + 2] += mesh.getPosition()[2];
   }
 
-  // 4. World -> camera space
+  /* World space -> camera space */
   float[] viewMatrix = matrixMath.transpose3x3(camera.getCameraOrientation());
   for (int i = 0; i < worldVerts.length; i += 4) {
     float vx = worldVerts[i]     - camera.getCameraPosition()[0];
@@ -68,7 +70,7 @@ public void queueMesh(float[] meshPosition, float[] meshRotation, float[] meshSc
 
   float[] camSpaceVerts = worldVerts.clone(); // needed for depth + hypotenuse shading
 
-  // 5. Perspective projection
+  /* Perspective projection */
   for (int i = 0; i < worldVerts.length; i += 4) {
     float[] v = java.util.Arrays.copyOfRange(worldVerts, i, i + 4);
     matrixMath.matrixPerspectiveProjection(v, fov);
@@ -78,23 +80,23 @@ public void queueMesh(float[] meshPosition, float[] meshRotation, float[] meshSc
   int screenWidth = getImage().getWidth();
   int screenHeight = getImage().getHeight();
 
-  // 6. Build triangles and push into the shared queue instead of drawing
-  for (int i = 0; i < triIndices.length; i += 3) {
-    int v1 = triIndices[i] * 4;
-    int v2 = triIndices[i + 1] * 4;
-    int v3 = triIndices[i + 2] * 4;
+  /* Build triangles and push into the queue */
+  for (int i = 0; i < mesh.getTriangleIndices().length; i += 3) {
+    int v1 = mesh.getTriangleIndices()[i] * 4;
+    int v2 = mesh.getTriangleIndices()[i + 1] * 4;
+    int v3 = mesh.getTriangleIndices()[i + 2] * 4;
 
     float w1 = worldVerts[v1 + 3];
     float w2 = worldVerts[v2 + 3];
     float w3 = worldVerts[v3 + 3];
     if (w1 <= 0.0001f || w2 <= 0.0001f || w3 <= 0.0001f) { continue; }
 
-    // Depth for SORTING: centroid z across all 3 vertices (camera space)
+    /* Depth for SORTING: centroid z across all 3 vertices (camera space) */
     float nearestZ = Math.max(camSpaceVerts[v1 + 2],
             Math.max(camSpaceVerts[v2 + 2], camSpaceVerts[v3 + 2]));
     float sortDepth = -nearestZ;
 
-    // Depth for SHADING: hypotenuse midpoint, as established earlier
+    /* Depth for SHADING: hypotenuse midpoint (camera space) */
     float d12 = cameraSpaceDistance(camSpaceVerts, v1, v2);
     float d23 = cameraSpaceDistance(camSpaceVerts, v2, v3);
     float d31 = cameraSpaceDistance(camSpaceVerts, v3, v1);
@@ -108,27 +110,35 @@ public void queueMesh(float[] meshPosition, float[] meshRotation, float[] meshSc
       hypMidZ = (camSpaceVerts[v3 + 2] + camSpaceVerts[v1 + 2]) / 2.0f;
     }
 
+    /* Brightness variable (Mesh get darker further away (Basic fog)) */
     float shadeDistance = -hypMidZ;
     float nearDist = 200f, farDist = 5000f;
     float brightness = 1.0f - ((shadeDistance - nearDist) / (farDist - nearDist));
-    brightness = Math.max(0.0f, Math.min(1.0f, brightness));
+    brightness = Math.clamp(brightness, 0.0f, 1.0f);
 
-    // --- Texture sampling instead of a fixed color[] ---
+    /*
+     Texture sampling
+     We can only paint the triangle a single color
+    */
     int triIdx = i / 3;
-    float u = triangleUVs[triIdx * 2];
-    float v = triangleUVs[triIdx * 2 + 1];
-    Color texel = sampleTexture(texture, u, v);
+    float u = mesh.getTriangleUVs()[triIdx * 2];
+    float v = mesh.getTriangleUVs()[triIdx * 2 + 1];
+    Color texel = sampleTexture(mesh.getTexture(), u, v);
 
+    /* Apply the fog */
     int r = Math.min(255, (int) (texel.getRed()   * brightness));
     int g = Math.min(255, (int) (texel.getGreen() * brightness));
     int b = Math.min(255, (int) (texel.getBlue()  * brightness));
 
-    float x1 = (worldVerts[v1]     * 400) + (screenWidth / 2.0f);
-    float y1 = (worldVerts[v1 + 1] * 400) + (screenHeight / 2.0f);
-    float x2 = (worldVerts[v2]     * 400) + (screenWidth / 2.0f);
-    float y2 = (worldVerts[v2 + 1] * 400) + (screenHeight / 2.0f);
-    float x3 = (worldVerts[v3]     * 400) + (screenWidth / 2.0f);
-    float y3 = (worldVerts[v3 + 1] * 400) + (screenHeight / 2.0f);
+    /* Fit to screen */
+    int screenWidthHalf = (int) (screenWidth / 2.0f);
+    int screenHeightHalf = (int) (screenHeight / 2.0f);
+    float x1 = worldVerts[v1]     * screenWidthHalf  + screenWidthHalf;
+    float y1 = worldVerts[v1 + 1] * screenHeightHalf + screenHeightHalf;
+    float x2 = worldVerts[v2]     * screenWidthHalf  + screenWidthHalf;
+    float y2 = worldVerts[v2 + 1] * screenHeightHalf + screenHeightHalf;
+    float x3 = worldVerts[v3]     * screenWidthHalf  + screenWidthHalf;
+    float y3 = worldVerts[v3 + 1] * screenHeightHalf + screenHeightHalf;
 
     float signedArea = (x2 - x1) * (y3 - y1) - (x3 - x1) * (y2 - y1);
     if (signedArea <= 0) { continue; }
@@ -138,15 +148,15 @@ public void queueMesh(float[] meshPosition, float[] meshRotation, float[] meshSc
 }
 
 private Color sampleTexture(GreenfootImage texture, float u, float v) {
-  // OBJ UVs are typically 0..1 with (0,0) at bottom-left; images index (0,0) at top-left, so flip v
+  /* OBJ UVs are typically 0..1 with (0,0) at bottom-left; images index (0,0) at top-left, so flip v */
   int texWidth = texture.getWidth();
   int texHeight = texture.getHeight();
 
   int x = (int) (u * (texWidth - 1));
   int y = (int) ((1.0f - v) * (texHeight - 1));
 
-  x = Math.max(0, Math.min(texWidth - 1, x));
-  y = Math.max(0, Math.min(texHeight - 1, y));
+  x = Math.clamp(x, 0, texWidth - 1);
+  y = Math.clamp(y, 0, texHeight - 1);
 
   return texture.getColorAt(x, y);
 }
